reipes page is modief with rearangements

--- a/recipes/iskender.html
+++ b/recipes/iskender.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes-Iskender</title>
+    <link rel="stylesheet" href="iskender-style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Iskender Kebap</h1>
-    <img src="../img/iskender.png" alt="AI photo of a Iskender Kebap" height="350" width="350">
-    <h3>Check the iskender kebap recipe below</h3>
+    <img src="../img/iskender.png" alt="AI photo of a Iskender Kebap" height=250 width=250>
+    <div class="container">
+        <h3>Check the iskender kebap recipe below</h3>
     <p>Although you use the items given, you will not get the same taste as you have in a real kebap saloon.</p>
     <p>Yet it is worth trying. You will need:</p>
     <ul>
@@ -26,6 +28,7 @@
         <li>Place the döner on top of pide</li>
         <li>Pour Tomato sauce on the döner</li>
         <li>Finally, melt the butter and pour on the döner.</li>
-    </ol>
+    </ol>   
+    </div>
 </body>
 </html>
