--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/iskender.html" target="_self" rel="noreferrer">Iskender Kebap</a>
+    <h1 id="title">Odin Recipes</h1>
+    <a id = 'link' href="./recipes/iskender.html" target="_self" rel="noreferrer">Iskender Kebap</a>
 </body>
 </html>
